--- a/app/src/main/res/layout/blank_fragment_1_fragment.xml
+++ b/app/src/main/res/layout/blank_fragment_1_fragment.xml
@@ -8,19 +8,14 @@
     tools:context=".frag.BlankFragment_1"
 
     >
-
-    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-        android:id="@+id/swipe"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/card2"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/list_row"
 
             />
-    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
