--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -3,42 +3,38 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav"
-    app:startDestination="@id/blankFragment_12">
-    <fragment
-        android:id="@+id/blankFragment2"
-        android:name="com.example.navcomp.BlankFragment2"
-        android:label="fragment_blank2"
-        tools:layout="@layout/fragment_blank2" >
-        <argument
-            android:name="name"
-            app:argType="string"
-            android:defaultValue="name" />
-        <argument
-            android:name="image"
-            app:argType="string"
-            android:defaultValue="src" />
-        <argument
-            android:name="description"
-            app:argType="string"
-            android:defaultValue="description" />
-        <action
-            android:id="@+id/action_blankFragment2_to_blankFragment_12"
-            app:destination="@id/blankFragment_12"
-            app:enterAnim="@android:anim/fade_out"
-            app:exitAnim="@android:anim/fade_in"
-            app:popEnterAnim="@android:anim/fade_out"
-            app:popExitAnim="@android:anim/fade_in" />
+    app:startDestination="@id/blankFragment_1">
 
-    </fragment>
     <fragment
-        android:id="@+id/blankFragment_12"
+        android:id="@+id/blankFragment_1"
         android:name="com.example.navcomp.frag.BlankFragment_1"
         android:label="blank_fragment_1_fragment"
         tools:layout="@layout/blank_fragment_1_fragment" >
         <action
-            android:id="@+id/action_blankFragment_12_to_blankFragment2"
-            app:destination="@id/blankFragment2"
+            android:id="@+id/action_blankFragment_1_to_blankFragment_2"
+            app:destination="@id/blankFragment_2"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out"
+            app:popEnterAnim="@android:anim/overshoot_interpolator"
+            app:popExitAnim="@android:anim/overshoot_interpolator" />
+    </fragment>
+    <fragment
+        android:id="@+id/blankFragment_2"
+        android:name="com.example.navcomp.BlankFragment_2"
+        android:label="fragment_blank_2"
+        tools:layout="@layout/fragment_blank_2" >
+        <action
+            android:id="@+id/action_blankFragment_2_to_blankFragment_1"
+            app:destination="@id/blankFragment_1"
             app:enterAnim="@android:anim/fade_out"
-            app:exitAnim="@android:anim/fade_in" />
+            app:exitAnim="@android:anim/fade_out" />
+        <argument android:name="name"
+            app:argType="string" />
+        <argument
+            android:name="about"
+            app:argType="string" />
+        <argument
+            android:name="image"
+            app:argType="string" />
     </fragment>
 </navigation>
