--- a/app/src/main/res/layout/blank_fragment_1_fragment.xml
+++ b/app/src/main/res/layout/blank_fragment_1_fragment.xml
@@ -10,7 +10,7 @@
     >
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/card2"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:listitem="@layout/list_row"
